# BeamerPresenter

./: .gitignore  BUGS  CHANGELOG.md  CMakeLists.txt  INSTALL.md  LICENSE  README.md  REUSE.toml  TODO  beamerpresenter.1  beamerpresenter.conf  beamerpresenter.conf.5  beamerpresenter.pro  doxyfile  local_config.json
.github/workflows/: MSYS2.yml  codeql-analysis.yml  flatpak-builder-qt5.yml  flatpak-builder-qt6.yml  flatpak-builder.yml  package-ubuntu-20.04-qt5-full.yml  package-ubuntu-20.04.yml  package-ubuntu-22.04-qt6-mupdf-small.yml  package-ubuntu-22.04-qt6-mupdf.yml  package-ubuntu-22.04.yml  package-ubuntu-24.04.yml
.reuse/: dep5
beamerpresenter/: beamerpresenter.pro  clocklabel.cpp  controlscreen.h  controlscreen.ui  main.cpp  pagenumberedit.cpp  pagenumberedit.h  presentationscreen.h  timer.cpp
config/: CMakeLists.txt  beamerpresenter.conf  beamerpresenter.conf.in  gui-2files.json  gui-interactive.json  gui-lecture.json  gui-markdown-notes.json  gui.json  local_config.json  pid2wid.sh
doc/: beamerpresenter-ui.1  beamerpresenter.1  beamerpresenter.conf.5  index.dox
man/: CMakeLists.txt  beamerpresenter-ui.5  beamerpresenter.1  beamerpresenter.conf.5
packaging/: PKGBUILD_MSYS2  PKGBUILD_MSYS2_git  PKGBUILD_git  PKGBUILD_mupdf  PKGBUILD_poppler  README.md  Windows.md  io.github.beamerpresenter.beamerpresenter-qt5.yml  io.github.beamerpresenter.beamerpresenter-qt6.yml  io.github.beamerpresenter.beamerpresenter.metainfo.xml  io.github.beamerpresenter.beamerpresenter.yml  io.github.beamerpresenter.yml  io.github.stiglers_eponym.BeamerPresenter-qt5.yml  io.github.stiglers_eponym.BeamerPresenter-qt6.yml  io.github.stiglers_eponym.BeamerPresenter.metainfo.xml  package_description
share/: CMakeLists.txt
share/applications/: beamerpresenter.desktop  beamerpresenter.desktop.in
share/doc/: README.html  README.html.in
src/: .clang-format  .trash.cpp  CMakeLists.txt  abstractrenderer.h  basicrenderer.cpp  basicrenderer.h  basicslide.cpp  basicslide.h  cachemap.cpp  cachemap.h  cachethread.cpp  cachethread.h  cacheupdatethread.cpp  cacheupdatethread.h  clocklabel.cpp  clocklabel.h  config.h.in  controlscreen.cpp  controlscreen.h  controlscreen.ui  drawhistorystep.cpp  drawpath.cpp  drawpath.h  drawslide.cpp  drawslide.h  embedapp.cpp  embedapp.h  embeddedwindow.cpp  embeddedwindow.h  enumerates.h  enumerates_qt.h  externalrenderer.cpp  externalrenderer.h  log.h  main.cpp  master.cpp  master.h  masterapp.h  mediaslide.cpp  mediaslide.h  (+67 more)
src/draw/: drawpath.cpp  drawpath.h  pathoverlay.cpp  pathoverlay.h
src/drawing/: abstractgraphicspath.cpp  abstractgraphicspath.h  arrowgraphicsitem.cpp  arrowgraphicsitem.h  basicgraphicspath.cpp  basicgraphicspath.h  dragtool.cpp  dragtool.h  drawhistorystep.cpp  drawhistorystep.h  drawtool.cpp  drawtool.h  ellipsegraphicsitem.cpp  ellipsegraphicsitem.h  flexgraphicslineitem.h  fullgraphicspath.cpp  fullgraphicspath.h  graphicspictureitem.h  linegraphicsitem.cpp  linegraphicsitem.h  pathcontainer.cpp  pathcontainer.h  pixmapgraphicsitem.cpp  pixmapgraphicsitem.h  pointingtool.cpp  pointingtool.h  rectgraphicsitem.cpp  rectgraphicsitem.h  selectionrectitem.cpp  selectionrectitem.h  selectiontool.cpp  selectiontool.h  shaperecognizer.cpp  shaperecognizer.h  strokerecognizer.cpp  strokerecognizer.h  textgraphicsitem.cpp  textgraphicsitem.h  texttool.h  tool.cpp  (+1 more)
src/gui/: actionbutton.cpp  actionbutton.h  analogclockwidget.cpp  analogclockwidget.h  brushiconengine.h  brushstylebutton.cpp  brushstylebutton.h  clockwidget.cpp  clockwidget.h  colorselectionbutton.cpp  colorselectionbutton.h  containerbaseclass.h  containerwidget.cpp  containerwidget.h  drawtoolbutton.cpp  drawtoolbutton.h  flexlayout.cpp  flexlayout.h  guiwidget.h  iconlabel.h  keyinputlabel.cpp  keyinputlabel.h  mediaslider.h  noteswidget.cpp  noteswidget.h  overviewbox.cpp  overviewbox.h  overviewframe.cpp  overviewframe.h  pagenumberedit.cpp  pagenumberedit.h  peniconengine.h  penstylebutton.cpp  penstylebutton.h  searchwidget.cpp  searchwidget.h  settingswidget.cpp  settingswidget.h  shapeselectionbutton.cpp  shapeselectionbutton.h  (+48 more)
src/media/: mediaannotation.cpp  mediaannotation.h  mediaitem.cpp  mediaitem.h  mediaplayer.cpp  mediaplayer.h  mediaprovider.cpp  mediaprovider.h  mediaslider.h
src/pdf/: basicrenderer.h  cachemap.cpp  cachemap.h  cachethread.cpp  cachethread.h  externalrenderer.cpp  externalrenderer.h  pdfdoc.cpp  pdfdoc.h  singlerenderer.cpp  singlerenderer.h
src/rendering/: CMakeLists.txt  abstractrenderer.h  externalrenderer.cpp  externalrenderer.h  mediaplayer.cpp  mediaplayer.h  mupdfdocument.cpp  mupdfdocument.h  mupdfrenderer.cpp  mupdfrenderer.h  pdfdocument.cpp  pdfdocument.h  pixcache.cpp  pixcache.h  pixcachethread.cpp  pixcachethread.h  pngpixmap.cpp  pngpixmap.h  popplerdocument.cpp  popplerdocument.h  popplerrenderer.cpp  popplerrenderer.h  qtdocument.cpp  qtdocument.h  qtrenderer.cpp  qtrenderer.h
src/screens/: controlscreen.cpp  controlscreen.h  presentationscreen.cpp  presentationscreen.h
src/slide/: drawslide.cpp  drawslide.h  mediaslide.cpp  mediaslide.h  presentationslide.cpp  presentationslide.h  previewslide.cpp  previewslide.h
src/slide/media/: embedapp.cpp  embedapp.h  videowidget.cpp  videowidget.h
src/ui/: controlscreen.ui
tests/: minimal.xml
translations/: de.ts  en_GB.ts  it.ts
